CONF: allow explicit dependency deactivation
Support for --without-xx or --with-xx=no

--- a/cmake/Makefile.in
+++ b/cmake/Makefile.in
@@ -288,6 +288,7 @@ MPC_HAVE_PROFILER = @MPC_HAVE_PROFILER@
 MPC_IN_PROCESS_MODE = @MPC_IN_PROCESS_MODE@
 MPC_IO_PKGCONFIG_LIB = @MPC_IO_PKGCONFIG_LIB@
 MPC_LAUNCHER = @MPC_LAUNCHER@
+MPC_LAUNCHER_PROGRAM = @MPC_LAUNCHER_PROGRAM@
 MPC_LOWCOMM_ENABLED = @MPC_LOWCOMM_ENABLED@
 MPC_MODULE_DEFINES = @MPC_MODULE_DEFINES@
 MPC_MODULE_LIST = @MPC_MODULE_LIST@
@@ -304,7 +305,6 @@ MPC_VERSION_MINOR = @MPC_VERSION_MINOR@
 MPC_VERSION_PATCH = @MPC_VERSION_PATCH@
 MPC_VERSION_PRE = @MPC_VERSION_PRE@
 MPC_VERSION_STRING = @MPC_VERSION_STRING@
-MPIEXEC_HYDDRA = @MPIEXEC_HYDDRA@
 MPIEXEC_HYDRA = @MPIEXEC_HYDRA@
 NEEDS_MPI_FINT = @NEEDS_MPI_FINT@
 NM = @NM@
@@ -337,6 +337,8 @@ PMI_CFLAGS = @PMI_CFLAGS@
 PMI_LIBS = @PMI_LIBS@
 PORTALS_CFLAGS = @PORTALS_CFLAGS@
 PORTALS_LIBS = @PORTALS_LIBS@
+PRTERUN = @PRTERUN@
+PRUN = @PRUN@
 PYTHON = @PYTHON@
 PYTHON_EXEC_PREFIX = @PYTHON_EXEC_PREFIX@
 PYTHON_PLATFORM = @PYTHON_PLATFORM@
@@ -361,6 +363,7 @@ SIZEOF_PTHREAD_RWLOCKATTR_T = @SIZEOF_PTHREAD_RWLOCKATTR_T@
 SIZEOF_PTHREAD_RWLOCK_T = @SIZEOF_PTHREAD_RWLOCK_T@
 SIZEOF_PTHREAD_SPINLOCK_T = @SIZEOF_PTHREAD_SPINLOCK_T@
 SIZEOF_SEM_T = @SIZEOF_SEM_T@
+SRUN_IN_PATH = @SRUN_IN_PATH@
 STRIP = @STRIP@
 UNW_CFLAGS = @UNW_CFLAGS@
 UNW_LIBS = @UNW_LIBS@
