--- a/src/bin/Makefile.in
+++ b/src/bin/Makefile.in
@@ -101,11 +101,12 @@ host_triplet = @host@
 # Cuda support
 #
 @MPC_CUDA_ENABLED_TRUE@am__append_4 = mpc_nvcc
-bin_PROGRAMS = mpc_sets$(EXEEXT) $(am__EXEEXT_1)
-@PRRTE_LAUNCHER_ENABLED_FALSE@am__append_3 = mpirun
-@MPC_HAS_SRUN_SUPPORT_TRUE@am__append_4 = mpcrun_opt/mpcrun_srun
-@HYDRA_LAUNCHER_ENABLED_TRUE@am__append_5 = mpcrun_opt/mpcrun_hydra mpcrun_opt/mpcrun_salloc_hydra 
-@PRRTE_LAUNCHER_ENABLED_TRUE@am__append_6 = mpcrun_opt/mpcrun_prrte
+bin_PROGRAMS = $(am__EXEEXT_1) $(am__EXEEXT_2)
+@MPC_LOWCOMM_ENABLED_TRUE@am__append_3 = mpc_sets
+@PRRTE_LAUNCHER_ENABLED_FALSE@am__append_4 = mpirun
+@MPC_HAS_SRUN_SUPPORT_TRUE@am__append_5 = mpcrun_opt/mpcrun_srun
+@HYDRA_LAUNCHER_ENABLED_TRUE@am__append_6 = mpcrun_opt/mpcrun_hydra mpcrun_opt/mpcrun_salloc_hydra 
+@PRRTE_LAUNCHER_ENABLED_TRUE@am__append_7 = mpcrun_opt/mpcrun_prrte
 subdir = src/bin
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/config/m4/ax_gcc_builtin.m4 \
@@ -127,16 +128,20 @@ CONFIG_HEADER = $(top_builddir)/mpc_config.h
 CONFIG_CLEAN_FILES = mpc_build_env.sh mpc_cflags mpc_ldflags mpcrun \
 	mpcvars.sh mpc_status
 CONFIG_CLEAN_VPATH_FILES =
-@PRRTE_LAUNCHER_ENABLED_FALSE@am__EXEEXT_1 = mpirun$(EXEEXT)
+@MPC_LOWCOMM_ENABLED_TRUE@am__EXEEXT_1 = mpc_sets$(EXEEXT)
+@PRRTE_LAUNCHER_ENABLED_FALSE@am__EXEEXT_2 = mpirun$(EXEEXT)
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)" \
 	"$(DESTDIR)$(mpcrun_plugindir)" "$(DESTDIR)$(pkgdatadir)" \
 	"$(DESTDIR)$(prefix_bindir)"
 PROGRAMS = $(bin_PROGRAMS)
+am__mpc_sets_SOURCES_DIST = ./mpc_sets.c
 am__dirstamp = $(am__leading_dot)dirstamp
-am_mpc_sets_OBJECTS = ./mpc_sets-mpc_sets.$(OBJEXT)
+@MPC_LOWCOMM_ENABLED_TRUE@am_mpc_sets_OBJECTS =  \
+@MPC_LOWCOMM_ENABLED_TRUE@	./mpc_sets-mpc_sets.$(OBJEXT)
 mpc_sets_OBJECTS = $(am_mpc_sets_OBJECTS)
 am__DEPENDENCIES_1 =
-mpc_sets_DEPENDENCIES = $(am__DEPENDENCIES_1)
+@MPC_LOWCOMM_ENABLED_TRUE@mpc_sets_DEPENDENCIES =  \
+@MPC_LOWCOMM_ENABLED_TRUE@	$(am__DEPENDENCIES_1)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
@@ -212,7 +217,7 @@ am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
 am__v_CCLD_0 = @echo "  CCLD    " $@;
 am__v_CCLD_1 = 
 SOURCES = $(mpc_sets_SOURCES) $(mpirun_SOURCES)
-DIST_SOURCES = $(mpc_sets_SOURCES) $(am__mpirun_SOURCES_DIST)
+DIST_SOURCES = $(am__mpc_sets_SOURCES_DIST) $(am__mpirun_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -531,14 +536,15 @@ pkgdata_SCRIPTS = mpc_compiler_common.sh
 # It duplicates mpcvarsh.sh but is needed for retrocompat
 prefix_bindir = $(prefix)
 prefix_bin_SCRIPTS = mpcvars.sh
-mpc_sets_SOURCES = ./mpc_sets.c
-mpc_sets_CFLAGS = -I$(abs_top_srcdir)/src/MPC_Lowcomm/include/ -I$(abs_top_srcdir)/src/MPC_Common/include/ -I$(abs_top_builddir)/src/MPC_Common/include/ -I$(abs_top_srcdir)/src/include/  -I$(abs_top_builddir)/src/include/ -I$(abs_top_srcdir)/src/MPC_MPI/include/
-mpc_sets_LDADD = $(ALLOC_LIBS) @ALL_MPC_LIBS@
+@MPC_LOWCOMM_ENABLED_TRUE@mpc_sets_SOURCES = ./mpc_sets.c
+@MPC_LOWCOMM_ENABLED_TRUE@mpc_sets_CFLAGS = -I$(abs_top_srcdir)/src/MPC_Lowcomm/include/ -I$(abs_top_srcdir)/src/MPC_Common/include/ -I$(abs_top_builddir)/src/MPC_Common/include/ -I$(abs_top_srcdir)/src/include/  -I$(abs_top_builddir)/src/include/ -I$(abs_top_srcdir)/src/MPC_MPI/include/
+@MPC_LOWCOMM_ENABLED_TRUE@mpc_sets_LDADD = $(ALLOC_LIBS) \
+@MPC_LOWCOMM_ENABLED_TRUE@	@ALL_MPC_LIBS@ $(am__empty)
 @PRRTE_LAUNCHER_ENABLED_FALSE@mpirun_SOURCES = ./mpirun.c
 mpcrun_plugindir = $(pkgdatadir)/mpcrun_opt/
 mpcrun_plugin_SCRIPTS = mpcrun_opt/mpcrun_none \
-	mpcrun_opt/mpcrun_none_mpc-gdb $(am__append_4) $(am__append_5) \
-	$(am__append_6)
+	mpcrun_opt/mpcrun_none_mpc-gdb $(am__append_5) $(am__append_6) \
+	$(am__append_7)
 all: all-am
 
 .SUFFIXES:
@@ -1144,6 +1150,10 @@ uninstall-am: uninstall-binPROGRAMS uninstall-binSCRIPTS \
 
 .PRECIOUS: Makefile
 
+
+#
+# mpirun
+#
 
 @PRRTE_LAUNCHER_ENABLED_TRUE@install-exec-hook:
 @PRRTE_LAUNCHER_ENABLED_TRUE@	$(MKDIR_P) $(prefix)/bin
