MERGE: Workshare and OMPT
Authors: Thomas Dionisi <thomas.dionisi@uvsq.fr>
         Ricardo Bispo Vieira <ricardo.cordeiro-bispo-vieira@uvsq.fr>

31b8cbf25 Add workshare install to pipeline
5f316b8b4 Remove doc template overriden
a33ead982 Merge refactor_ecr_merge into devel
0437ddb1d Debug on locks, add workshare config and debug in process mode, code cleaning
f0e45a250 Add config and bug corrections
8ab1b7755 Merge remote-tracking branch  'origin/devel' into refactor_ecr_merge
3f89bc3c0 Ompt: allow active tools to retrieve parallel data of sequential region
092017bfb Code cleaning
cd6adc024 Multinode workshare and other fixes
ac9d5b750 Worker workshare fixes
b47682c9e Bugfix
f36398c42 Bugfixes when threads disabled
3795bb165 Bugfixes
19f1b9d39 Add generated config
c1ea21d2d Bugfix
7e3fadb50 Include file
7310bce1b Cleaning and debug, add workshare files on lowcomm
137fe2d5a Cleaning and refactoring workshare
e90b4cd77 Put Workshare in MPC_Lowcomm and use macro to steal
04cc4ab58 Bug correction for workshare when MPI not enabled
07b9aad6c Workshare steal bug correction
3723cc2f6 Ompt: remove old references to sctk_assert
2d894c00b Ompt: wait id values starts at 1
28ddd1837 Ompt: minor fix on place id and add support for entry points:     - ompt_get_num_procs     - ompt_get_proc_id     - ompt_get_state (partial)     - ompt_get_task_memory     - ompt_get_num_devices
2c611a61f Ompt: add partial support for ompt_callback_dispatch for loops
ada6d3775 Ompt: Fix issue with threadprivate data in intel interface
86ded2513 Ompt: add frame infos for intel interface
b8b126730 Ompt: intel improvements:     - Tasking model     - Fix taskloop     - Add support of named critical constructs
71f5bf2b2 Ompt: - add support for frame infos     - Small fixes on nested locks
3db33797b Ompt: limit compilation warnings for unused variables
f51bc2e50 Ompt: add support entry point function ompt_get_unique_id_t
b445ddd94 Ompt: add supported callbacks
f565c30b2 Ompt: add support entry point fun

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ Env Sanitize:
   <<: *run_by_main
   stage: Initialization
   script:
-    - mkdir -p $HOME/GL_$CI_PIPELINE_ID/{build,buildspack,install,install_spack,test}
+    - mkdir -p $HOME/GL_$CI_PIPELINE_ID/{build,buildspack,buildworkshare,install,install_spack,test}
     - echo "Environment Intialized !"
 
 # post-actions to cleanup the machine after the run
@@ -158,6 +158,12 @@ MPC Compilation Spack:
   - cd $HOME/GL_$CI_PIPELINE_ID/buildspack
   - ${CI_PROJECT_DIR}/installmpc -vv --enable-spack-build --disable-build --prefix=$HOME/GL_$CI_PIPELINE_ID/install_spack --mpc-option='--with-slurm --enable-debug'
 
+MPC Compilation Workshare:
+  <<: *run_by_main
+  stage: Builds
+  script:
+  - cd $HOME/GL_$CI_PIPELINE_ID/buildworkshare
+  - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=$HOME/GL_$CI_PIPELINE_ID/install --mpc-option='--with-pmi1 --enable-debug' --enable-workshare
 
 ############################
 ####### TEST STAGE ########
