--- a/src/MPC_OpenMP/Makefile.in
+++ b/src/MPC_OpenMP/Makefile.in
@@ -518,7 +518,9 @@ top_srcdir = @top_srcdir@
 #                                                                      #
 ########################################################################
 mpc_headerdir = $(pkgincludedir)
-mpc_header_HEADERS = ./include/omp_abi.h ./include/mpcomp_abi.h ./include/mpcomp.h ./include/omp.h ./include/ompt.h
+mpc_header_HEADERS = ./include/mpcomp.h ./include/omp.h \
+                    ./include/ompt.h ./include/omp-tools.h
+
 SUBDIRS = src
 all: all-recursive
 
