--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -190,22 +190,22 @@ am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c \
 	multirail.c sctk_net_tools.c sctk_net_topology.c \
 	lowcomm_thread.c sctk_rail.c sctk_reorder.c endpoint.c \
 	sctk_topological_polling.c sctk_topological_rail.c \
-	sctk_window.c ./tcp/sctk_tcp.c ./tcp/sctk_tcp_rdma.c \
-	./tcp/sctk_tcp_toolkit.c ./shm/sctk_shm.c \
-	./shm/sctk_shm_eager.c ./shm/sctk_shm_raw_queues.c \
-	./shm/sctk_shm_cma.c ./shm/sctk_shm_frag.c \
-	./shm/sctk_shm_qemu.c ./shm/sctk_shm_raw_queues_internals.c \
-	./ib/sctk_ib_async.c ./ib/sctk_ib_buffered.c ./ib/sctk_ib.c \
-	./ib/sctk_ib_cm.c ./ib/sctk_ib_config.c ./ib/sctk_ib_cp.c \
-	./ib/sctk_ib_device.c ./ib/sctk_ib_eager.c ./ib/sctk_ib_mmu.c \
-	./ib/sctk_ib_mpi.c ./ib/sctk_ib_polling.c ./ib/sctk_ib_qp.c \
-	./ib/sctk_ib_rdma.c ./ib/sctk_ib_toolkit.c \
-	./ib/sctk_ib_topology.c ./ib/sctk_ibufs.c \
-	./ib/sctk_ibufs_rdma.c ./portals/sctk_portals.c \
-	./portals/sctk_ptl_cm.c ./portals/sctk_ptl_eager.c \
-	./portals/sctk_ptl_iface.c ./portals/sctk_ptl_offcoll.c \
-	./portals/sctk_ptl_rdma.c ./portals/sctk_ptl_rdv.c \
-	./portals/sctk_ptl_toolkit.c ./portals_am/sctk_ptl_am_iface.c \
+	sctk_window.c workshare.c ./tcp/sctk_tcp.c \
+	./tcp/sctk_tcp_rdma.c ./tcp/sctk_tcp_toolkit.c \
+	./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
+	./shm/sctk_shm_raw_queues.c ./shm/sctk_shm_cma.c \
+	./shm/sctk_shm_frag.c ./shm/sctk_shm_qemu.c \
+	./shm/sctk_shm_raw_queues_internals.c ./ib/sctk_ib_async.c \
+	./ib/sctk_ib_buffered.c ./ib/sctk_ib.c ./ib/sctk_ib_cm.c \
+	./ib/sctk_ib_config.c ./ib/sctk_ib_cp.c ./ib/sctk_ib_device.c \
+	./ib/sctk_ib_eager.c ./ib/sctk_ib_mmu.c ./ib/sctk_ib_mpi.c \
+	./ib/sctk_ib_polling.c ./ib/sctk_ib_qp.c ./ib/sctk_ib_rdma.c \
+	./ib/sctk_ib_toolkit.c ./ib/sctk_ib_topology.c \
+	./ib/sctk_ibufs.c ./ib/sctk_ibufs_rdma.c \
+	./portals/sctk_portals.c ./portals/sctk_ptl_cm.c \
+	./portals/sctk_ptl_eager.c ./portals/sctk_ptl_iface.c \
+	./portals/sctk_ptl_offcoll.c ./portals/sctk_ptl_rdma.c \
+	./portals/sctk_ptl_rdv.c ./portals/sctk_ptl_toolkit.c \
 	./portals_am/sctk_ptl_am_iface.c \
 	./portals_am/sctk_ptl_am_toolkit.c \
 	./portals_am/sctk_ptl_am_arpc_api.c ./portals_am/arpc_weak.c \
@@ -254,16 +254,16 @@ am_libmpclowcomm_la_OBJECTS = coll.lo comm.lo sctk_checksum.lo \
 	sctk_low_level_comm.lo multirail.lo sctk_net_tools.lo \
 	sctk_net_topology.lo lowcomm_thread.lo sctk_rail.lo \
 	sctk_reorder.lo endpoint.lo sctk_topological_polling.lo \
-	sctk_topological_rail.lo sctk_window.lo ./tcp/sctk_tcp.lo \
-	./tcp/sctk_tcp_rdma.lo ./tcp/sctk_tcp_toolkit.lo \
-	./shm/sctk_shm.lo ./shm/sctk_shm_eager.lo \
-	./shm/sctk_shm_raw_queues.lo ./shm/sctk_shm_cma.lo \
-	./shm/sctk_shm_frag.lo ./shm/sctk_shm_qemu.lo \
-	./shm/sctk_shm_raw_queues_internals.lo $(am__objects_1) \
-	$(am__objects_2) $(am__objects_3) ./cplane/auth.lo \
-	./cplane/peer.lo ./cplane/proto.lo ./cplane/port.lo \
-	./cplane/monitor.lo ./cplane/set.lo ./cplane/uid.lo \
-	./cplane/name.lo $(am__objects_4)
+	sctk_topological_rail.lo sctk_window.lo workshare.lo \
+	./tcp/sctk_tcp.lo ./tcp/sctk_tcp_rdma.lo \
+	./tcp/sctk_tcp_toolkit.lo ./shm/sctk_shm.lo \
+	./shm/sctk_shm_eager.lo ./shm/sctk_shm_raw_queues.lo \
+	./shm/sctk_shm_cma.lo ./shm/sctk_shm_frag.lo \
+	./shm/sctk_shm_qemu.lo ./shm/sctk_shm_raw_queues_internals.lo \
+	$(am__objects_1) $(am__objects_2) $(am__objects_3) \
+	./cplane/auth.lo ./cplane/peer.lo ./cplane/proto.lo \
+	./cplane/port.lo ./cplane/monitor.lo ./cplane/set.lo \
+	./cplane/uid.lo ./cplane/name.lo $(am__objects_4)
 libmpclowcomm_la_OBJECTS = $(am_libmpclowcomm_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -657,15 +657,16 @@ libmpclowcomm_la_SOURCES = coll.c comm.c sctk_checksum.c \
 	multirail.c sctk_net_tools.c sctk_net_topology.c \
 	lowcomm_thread.c sctk_rail.c sctk_reorder.c endpoint.c \
 	sctk_topological_polling.c sctk_topological_rail.c \
-	sctk_window.c ./tcp/sctk_tcp.c ./tcp/sctk_tcp_rdma.c \
-	./tcp/sctk_tcp_toolkit.c ./shm/sctk_shm.c \
-	./shm/sctk_shm_eager.c ./shm/sctk_shm_raw_queues.c \
-	./shm/sctk_shm_cma.c ./shm/sctk_shm_frag.c \
-	./shm/sctk_shm_qemu.c ./shm/sctk_shm_raw_queues_internals.c \
-	$(am__append_4) $(am__append_6) $(am__append_8) \
-	./cplane/auth.c ./cplane/peer.c ./cplane/proto.c \
-	./cplane/port.c ./cplane/monitor.c ./cplane/set.c \
-	./cplane/uid.c ./cplane/name.c $(am__append_9)
+	sctk_window.c workshare.c ./tcp/sctk_tcp.c \
+	./tcp/sctk_tcp_rdma.c ./tcp/sctk_tcp_toolkit.c \
+	./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
+	./shm/sctk_shm_raw_queues.c ./shm/sctk_shm_cma.c \
+	./shm/sctk_shm_frag.c ./shm/sctk_shm_qemu.c \
+	./shm/sctk_shm_raw_queues_internals.c $(am__append_4) \
+	$(am__append_6) $(am__append_8) ./cplane/auth.c \
+	./cplane/peer.c ./cplane/proto.c ./cplane/port.c \
+	./cplane/monitor.c ./cplane/set.c ./cplane/uid.c \
+	./cplane/name.c $(am__append_9)
 
 # library dependency #
 libmpclowcomm_la_LIBADD = $(ALLOC_LIBS) \
@@ -913,6 +914,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_topological_rail.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_window.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/shm_coll.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/workshare.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./cplane/$(DEPDIR)/auth.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./cplane/$(DEPDIR)/monitor.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./cplane/$(DEPDIR)/name.Plo@am__quote@
